Reddit on the menu bar.

--- a/application/layouts/scripts/_menu.phtml
+++ b/application/layouts/scripts/_menu.phtml
@@ -162,6 +162,9 @@
       <!-- <li id="irc-chat" data-name="/r/diablo IRC Chat" data-tooltip="Click to join the /r/diablo chat channel!<br/><br/>If you have your own IRC client, feel free to connect via: <ul><li>Server: irc.esper.net</li><li>Channel: #diablo</li></ul>" class='social'>
         <a href="http://chat.d3up.com"><img src='/images/irc_chat.png'/></a>
       </li> -->
+      <li id="irc-chat" data-name="/r/d3up - D3Up.com on Reddit" data-tooltip="Feel free to join in the discussion on /r/d3up! Post bugs, talk about builds, request features and help with the sites development (when possible)." class='social'>
+        <a href="http://reddit.com/r/d3up"><img src='/images/r_logo.png'/></a>
+      </li>
 		</ul>	
 	</div>
 </div>
