Removed sorting possibilities.

--- a/application/views/scripts/group/_build-table.phtml
+++ b/application/views/scripts/group/_build-table.phtml
@@ -33,10 +33,10 @@
 		<th></th>
 		<th class="views">SC/HC</th>
 		<th>Paragon</th>
-		<th><a href="?sort=name<?= $params ?>">Name</a></th>
+		<th>Name</th>
 		<th>Skills</th>
-		<th><a href="?sort=dps<?= $params ?>">DPS</a></th>
-		<th><a href="?sort=ehp<?= $params ?>">EHP</a></th>
+		<th>DPS</th>
+		<th>EHP</th>
 		<th></th>
 	</tr>
 <? foreach($this->group->members as $build): ?>
