--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -10,6 +10,6 @@
 </div> -->
 <div id="sys-message">
 	<h3 style='margin: 0; color: #0d0'>24hr Stream for Charity</h3>
-	Just wanted to let you late night players know about a 24 Hour Charity Marathon Stream, View the background info on this post on <a href="http://www.reddit.com/r/Diablo/comments/14i0tt/24_hour_marathon_monk_stream_to_raise_money_for/">reddit</a>. Ends tomorrow at 11am EST.
+	Just wanted to let you late night players know about a <a href="http://twitch.tv/meto5000">24 Hour Charity Marathon Stream</a>, View the background info on this post on <a href="http://www.reddit.com/r/Diablo/comments/14i0tt/24_hour_marathon_monk_stream_to_raise_money_for/">reddit</a>. Ends tomorrow at 11am EST.
 	If something seems wrong, please let me know at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div>
