--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,5 +1,5 @@
 <div id="sys-message">
-	<h3 style='margin: 0; color: #0d0'>Group/Party Buffs Tab</h3>
-	There's a new tab on your build, it's for all the buffs that your fellow players can buff you with. Hit the tab and you can activate all the buffs from other classes. See one missing? Email me.
+	<h3 style='margin: 0; color: #0d0'>Nov/Dec Updates & Patch Notes</h3>
+	I've compiled all of the changes over the last month or so and wrapped them up into a patch note format for easy viewing. Feel free to read them [here on d3up](/update/36) or over on [/r/diablo](http://www.reddit.com/r/Diablo/comments/14r2u4/d3upcom_recent_updates_and_improvements_and_our/)!
 	If something seems wrong, please let me know at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div>
