Note to self: System Messages don't use markdown… you shouldn't use markdown for them or it just looks silly.

--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,5 +1,5 @@
 <div id="sys-message">
 	<h3 style='margin: 0; color: #0d0'>Nov/Dec Updates & Patch Notes</h3>
-	I've compiled all of the changes over the last month or so and wrapped them up into a patch note format for easy viewing. Feel free to read them [here on d3up](/update/36) or over on [/r/diablo](http://www.reddit.com/r/Diablo/comments/14r2u4/d3upcom_recent_updates_and_improvements_and_our/)!
+	I've compiled all of the changes over the last month or so and wrapped them up into a patch note format for easy viewing. Feel free to read them <a href="/update/36">here on d3up</a> or over on <a href="http://www.reddit.com/r/Diablo/comments/14r2u4/d3upcom_recent_updates_and_improvements_and_our/">/r/diablo</a>!
 	If something seems wrong, please let me know at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div>
