--- a/application/views/scripts/record/build.phtml
+++ b/application/views/scripts/record/build.phtml
@@ -60,7 +60,7 @@
       <li><a class='saveStats button' href="#">Save Stats to DB</a></li>
       <li><a data-tab="#json" class='button'>JSON Data</a></li>
       <? endif ?>
-      <li><a data-tab="#skill-catalog" class="button">Skill Catalog</a></li>
+      <!-- <li><a data-tab="#skill-catalog" class="button">Skill Catalog</a></li> -->
       <li><a data-tab="#dps-math" class='button'>DPS Calculations</a></li>
       <!-- <li><a data-tab="#suggestions" class="button">Suggestions</a></li>
       <li><a data-tab="#share" class="button">Share</a></li> -->
@@ -85,7 +85,7 @@
       <div id="json"><?= $this->render("./record/build/json.phtml") ?></div>
       <? endif ?>
       <div id="dps-math"><?= $this->render("./record/build/math-dps.phtml") ?></div>
-			<div id="skill-catalog"><?= $this->render("./record/build/skill-catalog.phtml") ?></div>
+			<!-- <div id="skill-catalog"><?= $this->render("./record/build/skill-catalog.phtml") ?></div> -->
       <!-- <div id="suggestions"><?= $this->render("./record/build/suggestions.phtml") ?></div>
       <div id="share"><?= $this->render("./record/build/share.phtml") ?></div> -->
     </div>
@@ -178,8 +178,8 @@
       // Store these so that BuildUI.js can get to em
       d3up.builds = {
         build: build,
-        compare: buildCompare,
-        simulate: buildSimulate
+        compare: buildCompare
+        // simulate: buildSimulate
       };
       d3up.compare = compare;
       // Render build to Statistics Panels
@@ -194,7 +194,7 @@
       build.renderSkillsTo($("#group-buffs"));
       // Render the Skills and Data to the Header
       build.renderSkillsTo($("#build-header"));
-      build.renderSkillCatalog($("#skill-catalog"));
+      // build.renderSkillCatalog($("#skill-catalog"));
 	  });
   </script>
   <script type="text/javascript" src="/js/unmin/buildui.js"></script>	
