--- a/application/views/scripts/record/tooltip/build.phtml
+++ b/application/views/scripts/record/tooltip/build.phtml
@@ -1,29 +1,22 @@
 <link rel="stylesheet" href="/css/powered.css" type="text/css" />
 <div class="d3up-powered">
-	<h1><?= $this->record->name ?></h1>
-	<h3>Level <?= $this->record->level ?>, Paragon Level <?= $this->record->paragon ?></h3>
-	<h5>
-		<?= ($this->record->hardcore) ? "<span class='neg'>Hardcore</span>" : "<span class='pos'>Softcore</span>" ?>
-		<?= ucwords(str_replace("-", " ", $this->record->class)) ?> Build
-		<? if($this->record->_characterRg): ?>
-			(<?= $this->regionDisplay($this->record->_characterRg) ?>)
-		<? endif ?>
-	</h5>
 	<table class="stats-table">
 	  <tr>
-	    <td class="hl-dps">
-	      <div class="item-stat">
-	        <span data-value="dps" class="value"><?= round($this->record->stats['dps'], 2) ?></span>
-	        <span class="stat">DPS</span>
-	      </div>
-	    </td>
-	    <td class="hl-ehp">
-	      <div class="item-stat">
-	        <span data-value="ehp" class="value"><?= round($this->record->stats['ehp'], 2) ?></span>
-	        <span class="stat">EHP</span>
-	      </div>
-	    </td>
-	  </tr>
+			<td>
+				<img class='class-icon' src="/images/<?= $this->record->class ?>.png"/>
+			</td>
+			<td>
+				<h1><?= $this->record->name ?></h1>
+				<h3>
+					L<?= $this->record->level ?> (<?= $this->record->paragon ?>) 
+					<?= ($this->record->hardcore) ? "<span class='neg'>HC</span>" : "<span class='pos'>SC</span>" ?>		
+					<?= ucwords(str_replace("-", " ", $this->record->class)) ?>
+					<? if($this->record->_characterRg): ?>
+						(<?= $this->regionDisplay($this->record->_characterRg, 'short') ?>)
+					<? endif ?>
+				</h3>
+			</td>
+		</tr>
 	</table>
 	<ul class="skills">
 		<? foreach($this->record->actives as $active): ?>
@@ -40,4 +33,20 @@
 			</li>
 		<? endforeach ?>
 	</ul>
+	<table class="stats-table">
+	  <tr>
+	    <td class="hl-dps">
+	      <div class="item-stat">
+	        <span data-value="dps" class="value"><?= $this->prettyStat($this->record->stats['dps'], 0) ?></span>
+	        <span class="stat">DPS</span>
+	      </div>
+	    </td>
+	    <td class="hl-ehp">
+	      <div class="item-stat">
+	        <span data-value="ehp" class="value"><?= $this->prettyStat($this->record->stats['ehp'], 0) ?></span>
+	        <span class="stat">EHP</span>
+	      </div>
+	    </td>
+	  </tr>
+	</table>
 </div>
