--- a/public_html/css/powered.css
+++ b/public_html/css/powered.css
@@ -130,7 +130,7 @@ a:hover .ui-button-text {
 }
 .stats-table {
   width: 285px;
-  margin: 10px auto 10px;
+  margin: 5px auto;
   border: 1px solid #333;
   background: #222;
 }
@@ -167,8 +167,8 @@ a:hover .ui-button-text {
 }
 .skills {
 	list-style: none;
-	padding: 0 3px;
-	margin: 5px 0 0;
+	padding: 0px;
+	margin: 0 6px;
 	display: inline-block;
 }
 .skills > li {
@@ -180,15 +180,20 @@ a:hover .ui-button-text {
 	width: 30px;
 }
 .d3up-powered h1 {
-	margin: 10px 10px 0 ;
 	font-size: 22px;
 	color: #70B1D5;
+	margin: 0;
 }
 .d3up-powered h5,
 .d3up-powered h3 {
 	font-size: 15px;
-	margin: 0 10px 5px;
+	margin: 0;
+	font-weight: normal;
 }
 .d3up-powered h5 {
 	font-size: 12px;
+}
+.class-icon {
+	float: left;
+	margin-right: 10px;
 }
