Added a Search Box that searches by Battle Tag.

--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,5 +1,5 @@
 <div id="sys-message">
-	<h3 style='margin: 0; color: #0d0'>Join in the Discussion on /r/d3up</h3>
-	I really am enjoying the public interaction and <a href="http://reddit.com/r/d3up">discussion happening on /r/d3up</a>, it just feels a bit more organized than the feedback tab on the site. Feel free to head over and report bugs, suggest features or just talk about d3up in general.
+	<h3 style='margin: 0; color: #0d0'>Search by Battle Tag</h3>
+	You'll notice the little search box below this message to the right. You can use it to search for public builds associated to a specific battle tag. You'll find any build imported by any user with that specific tag (so there may be dupes).
 	If something seems wrong, please let me know at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div>
