Fixed a form closure issue.

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -57,7 +57,7 @@
 			</div>
 			<form method="post" action="/search" class="search-box">
 				<input type="text" name="search" id="search-box" placeholder="Search by BattleTag - Name#1234">
-			</dovm>
+			</form>
 		</div>
 		<?= $this->render("_menu.phtml") ?>
 		<div id="main">
