Added inputs to all gains by stats so you can adjust those values.

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -2387,3 +2387,9 @@ div#statistics {
 .activatable {
 	cursor: pointer;
 }
+.pt-adjustor {
+	display: inline;
+	width: 30px;
+	height: 1.5em;
+	margin-left: 5px;
+}
