--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -8,7 +8,7 @@
 	<link rel="shortcut icon" href="/favicon.ico" sizes="16x16 32x32 64x64 128x128">
 	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.19/themes/dot-luv/jquery-ui.css" type="text/css" />
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.js"></script>
-	<script type="text/javascript" src="/js/powered.js"></script>
+	<!-- <script type="text/javascript" src="/js/powered.js"></script> -->
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.js"></script>
 	<script src="http://us.battle.net/d3/static/js/tooltips.js"></script>
 	<?= $this->headCss()
