System Message update.

--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,5 +1,6 @@
 <div id="sys-message">
-	<h3 style='margin: 0; color: #0d0'>Search by Battle Tag</h3>
-	You'll notice the little search box below this message to the right. You can use it to search for public builds associated to a specific battle tag. You'll find any build imported by any user with that specific tag (so there may be dupes).
-	If something seems wrong, please let me know at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
+	<h3 style='margin: 0; color: #0d0'>Happy Holidays!</h3>
+	It's been a great half year now working on D3Up, you've all been incredible and provided some amazing feedback. Here's to you and hoping you have a great holiday season to wrap up the year!
+	I'm going to be taking it easy for the next couple weeks and will be trying to keep myself away from work. 
+	Still, if something seems wrong, please let me know at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div>
