Updated System Message.

--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,6 +1,5 @@
 <div id="sys-message">
-	<h3 style='margin: 0; color: #0d0'>Happy Holidays!</h3>
-	It's been a great half year now working on D3Up, you've all been incredible and provided some amazing feedback. Here's to you and hoping you have a great holiday season to wrap up the year!
-	I'm going to be taking it easy for the next couple weeks and will be trying to keep myself away from work. 
-	Still, if something seems wrong, please let me know at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
+	<h3 style='margin: 0; color: #0d0'>Getting back to Business</h3>
+	Now that my long holiday vacation is over, it's time to get back to business. If you've emailed me over the past two weeks without a response, I'll be getting around to those emails soon. Expect some fun updates in the coming weeks!
+	If you find something that seems wrong, please let me know at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div>
