Fix to Acid Cloud naming problems.

--- a/application/views/scripts/item/sales-history.phtml
+++ b/application/views/scripts/item/sales-history.phtml
@@ -170,7 +170,7 @@
 							<option label="Maximum Mana" value="mana-max">Maximum Mana</option>
 							<option label="Reduces resource cost of Firebomb" value="wd-firebomb">Reduces resource cost of Firebomb</option>
 							<option label="Increases Haunt Damage" value="wd-haunt">Increases Haunt Damage</option>
-							<option label="Increases Critical Hit Chance of Acid Clouds" value="wd-acid-clouds">Increases Critical Hit Chance of Acid Clouds</option>
+							<option label="Increases Critical Hit Chance of Acid Clouds" value="wd-acid-cloud">Increases Critical Hit Chance of Acid Clouds</option>
 							<option label="Reduces resource cost of Firebats" value="wd-firebats">Reduces resource cost of Firebats</option>
 							<option label="Reduces cooldown of Summon Zombie Dogs" value="wd-zombie-dogs">Reduces cooldown of Summon Zombie Dogs</option>
 							<option label="Increases Plague of Toads damage" value="wd-plague-of-toads">Increases Plague of Toads damage</option>
