Added Downtime Notice for this weekend.

--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,5 +1,5 @@
 <div id="sys-message">
-	<h3 style='margin: 0; color: #0d0'>Getting back to Business</h3>
-	Now that my long holiday vacation is over, it's time to get back to business. If you've emailed me over the past two weeks without a response, I'll be getting around to those emails soon. Expect some fun updates in the coming weeks!
+	<h3 style='margin: 0; color: #d00'>Notice: Downtime this Weekend!</h3>
+	I'll be bringing the servers down for 1-2 hours this weekend, hopefully either early morning or really late at night. I'll be doing some DB upgrades (much overdue) to alleviate some load on the site. I'll try to give a bit of notice once I figure out what I'm doing this weekend :)
 	If you find something that seems wrong, please let me know at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div>
