--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,5 +1,5 @@
 <div id="sys-message">
 	<h3 style='margin: 0; color: #d00'>Notice: Downtime this Weekend!</h3>
-	I'll be bringing the servers down for 1-2 hours this weekend, hopefully either early morning or really late at night. I'll be doing some DB upgrades (much overdue) to alleviate some load on the site. I'll try to give a bit of notice once I figure out what I'm doing this weekend :)
+	I'll be bringing the servers down for 1-2 hours this weekend, hopefully either early morning or really late at night. I'll be doing some DB upgrades (much overdue) to alleviate some load on the site. I'll try to give a bit of advanced notice on the times once I figure it out.
 	If you find something that seems wrong, please let me know at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div>
