--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,5 +1,5 @@
 <div id="sys-message">
-	<h3 style='margin: 0; color: #d00'>Notice: Downtime this Weekend!</h3>
-	I'll be bringing the servers down for 1-2 hours this weekend, hopefully either early morning or really late at night. I'll be doing some DB upgrades (much overdue) to alleviate some load on the site. I'll try to give a bit of advanced notice on the times once I figure it out.
-	If you find something that seems wrong, please let me know at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
+	<h3 style='margin: 0; color: #d00'>PLEASE READ: Saving Disabled</h3>
+	I've disabled ALL saving to the database on the site in order to perform the updates I need to. Please read <a href="http://www.reddit.com/r/d3up/comments/16wpap/d3upcom_database_upgrades_all_data_saving/">this post for more information</a> and
+	Feel free to contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div>
