All changes for DB converts Icons on Tooltips Sync Options (All/Skils/Gear)

--- a/application/layouts/scripts/d3bit.phtml
+++ b/application/layouts/scripts/d3bit.phtml
@@ -75,7 +75,7 @@
           },
           builder = new d3up.ItemBuilder,
           gearSlots = $("#build-gear .equipped"),
-          gear = <?= $this->build->equipment->getGearJson() ?>,
+          gear = <?= $this->build->gear->getGearJson() ?>,
           newItem = <?= json_encode($this->item->cleanExport()) ?>,
           meta = {
             level: '<?= $this->build->level ?>',
