New system message.

--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,5 +1,5 @@
 <div id="sys-message">
-	<h3 style='margin: 0; color: #d00'>PLEASE READ: Saving Disabled</h3>
-	I've disabled ALL saving to the database on the site in order to perform the updates I need to. Please read <a href="http://www.reddit.com/r/d3up/comments/16wpap/d3upcom_database_upgrades_all_data_saving/">this post for more information</a> and
-	Feel free to contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
+	<h3 style='margin: 0; color: #0d0'>DB Upgrades Complete!</h3>
+	The database updates are now complete! The purpose of these updates were to increase speed on the site and bring online a few new features. You can read about the results, new features and old features brought back online on <a href="http://www.reddit.com/r/d3up/comments/16wpap/d3upcom_database_upgrades_all_data_saving/">the /r/d3up post</a>.
+	If you find ANYTHING wrong, contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div>
