--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -4,7 +4,7 @@
 	If you find ANYTHING wrong, contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div> -->
 <div id="sys-message">
-	<h3 style='margin: 0; color: #d00'>Error creating Builds</h3>
-	There's currently an error when trying to create a new build, I'm looking into it right now. So, for the next couple hours, expect build creation to be down!
+	<h3 style='margin: 0; color: #d00'>Errors: Saving/Creating/Syncing Builds</h3>
+	There's currently an error when trying to do anything related to updating a build, I'm looking into it right now. So, for the next couple hours, expect build creation to be down!
 	If you find ANYTHING wrong, contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div>
