--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,6 +1,6 @@
 <div id="sys-message">
-	<h3 style='margin: 0; color: #0d0'>DB Upgrades Complete!</h3>
-	The database updates are now complete! The purpose of these updates were to increase speed on the site and bring online a few new features. You can read about the results, new features and old features brought back online on <a href="http://www.reddit.com/r/d3up/comments/16wpap/d3upcom_database_upgrades_all_data_saving/">the /r/d3up post</a>.
+	<h3 style='margin: 0; color: #0d0'>1.0.7 Skills/Gems are Live</h3>
+	All of the calculations <i>should</i> be updated now to match the 1.0.7 patch release. I've also corrected the Ruby damage formula, but there still may be inconsistencies. If you find your character's DPS is wrong with one of the new gems, please sent me an email with a link to your build!
 	If you find ANYTHING wrong, contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div>
 <!-- <div id="sys-message">
