--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,7 +1,7 @@
 <div id="sys-message">
 	<h3 style='margin: 0; color: #0d0'>1.0.7 Skills/Gems are Live</h3>
-	All of the calculations <i>should</i> be updated now to match the 1.0.7 patch release. I've also corrected the Ruby damage formula, but there still may be inconsistencies. If you find your character's DPS is wrong with one of the new gems, please sent me an email with a link to your build!
-	If you find ANYTHING wrong, contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
+	All of the calculations <i>should</i> be updated now to match the 1.0.7 patch release and I've posted <a href="http://www.reddit.com/r/d3up/comments/18dtlq/d3upcom_v107_and_future_plans/">a long update on /r/d3up</a> about the site. If you find your character's DPS is wrong with one of the new gems, please sent me an email with a link to your build!
+	Feel free to contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a> to report any bugs.
 </div>
 <!-- <div id="sys-message">
 	<h3 style='margin: 0; color: #d00'>Errors: Saving/Creating/Syncing Builds</h3>
