--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,10 +1,9 @@
-<div id="sys-message">
+<!-- <div id="sys-message">
 	<h3 style='margin: 0; color: #0d0'>1.0.7 Skills/Gems are Live</h3>
 	All of the calculations <i>should</i> be updated now to match the 1.0.7 patch release and I've posted <a href="http://www.reddit.com/r/d3up/comments/18dtlq/d3upcom_v107_and_future_plans/">a long update on /r/d3up</a> about the site. If you find your character's DPS is wrong with one of the new gems, please sent me an email with a link to your build!
 	Feel free to contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a> to report any bugs.
-</div>
-<!-- <div id="sys-message">
-	<h3 style='margin: 0; color: #d00'>Errors: Saving/Creating/Syncing Builds</h3>
-	There's currently an error when trying to do anything related to updating a build, I'm looking into it right now. So, for the next couple hours, expect build creation to be down!
-	If you find ANYTHING wrong, contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div> -->
+<div id="sys-message">
+	<h3 style='margin: 0; color: #d00'>New BoA Items not syncing properly</h3>
+	It's come to my attention that the new BoA items (some?) are not syncing properly. I've <a href="http://us.battle.net/d3/en/forum/topic/7908401195">posted a thread</a> in the API Forums, I'll keep you updated! I also posted <a href="http://www.reddit.com/r/d3up/comments/18dtlq/d3upcom_v107_and_future_plans/">a long update on /r/d3up</a> about the site and 1.0.7 updates. If you find your character's DPS is wrong with one of the new gems, please sent me an email to <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a> with a link to your build!
+</div>
