amended message again to inform about new gems not showing up

--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -4,6 +4,6 @@
 	Feel free to contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a> to report any bugs.
 </div> -->
 <div id="sys-message">
-	<h3 style='margin: 0; color: #d00'>New BoA Items not syncing properly</h3>
-	It's come to my attention that the new BoA items (some?) are not syncing properly. I've <a href="http://us.battle.net/d3/en/forum/topic/7908401195">posted a thread</a> in the API Forums, I'll keep you updated! I also posted <a href="http://www.reddit.com/r/d3up/comments/18dtlq/d3upcom_v107_and_future_plans/">a long update on /r/d3up</a> about the site and 1.0.7 updates. If you find your character's DPS is wrong with one of the new gems, please sent me an email to <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a> with a link to your build!
+	<h3 style='margin: 0; color: #d00'>New BoA Items and Marquise Gems not syncing properly</h3>
+	It's come to my attention that the new BoA items (some?) are not syncing properly, and the new Marquise Gems aren't showing up on items either. I've contacted Blizzard regarding these issues and will keep you posted! I also posted <a href="http://www.reddit.com/r/d3up/comments/18dtlq/d3upcom_v107_and_future_plans/">a long update on /r/d3up</a> about the site and 1.0.7 updates. If you find any issues with the new gems, please <a href="mailto:aaron.cox@greymass.com">sent me an email</a> with a link to your build!
 </div>
