--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -3,7 +3,11 @@
 	All of the calculations <i>should</i> be updated now to match the 1.0.7 patch release and I've posted <a href="http://www.reddit.com/r/d3up/comments/18dtlq/d3upcom_v107_and_future_plans/">a long update on /r/d3up</a> about the site. If you find your character's DPS is wrong with one of the new gems, please sent me an email with a link to your build!
 	Feel free to contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a> to report any bugs.
 </div> -->
-<div id="sys-message">
+<!-- <div id="sys-message">
 	<h3 style='margin: 0; color: #d00'>New BoA Items and Marquise Gems not syncing properly</h3>
 	It's come to my attention that the new BoA items (some?) are not syncing properly, and the new Marquise Gems aren't showing up on items either. I've contacted Blizzard regarding these issues and will keep you posted! I also posted <a href="http://www.reddit.com/r/d3up/comments/18dtlq/d3upcom_v107_and_future_plans/">a long update on /r/d3up</a> about the site and 1.0.7 updates. If you find any issues with the new gems, please <a href="mailto:aaron.cox@greymass.com">sent me an email</a> with a link to your build!
+</div> -->
+<div id="sys-message">
+	<h3 style='margin: 0; color: #d00'>Issues with Battle.net - Please Read</h3>
+	Since sometime on Friday (the 15th), the Battle.net API has been acting strange. Requests for characters and items (non 1.0.7 related) are failing. I've contacted Blizzard about it and hopefully they'll have it resolved soon. (Previously)  d I also posted <a href="http://www.reddit.com/r/d3up/comments/18dtlq/d3upcom_v107_and_future_plans/">a long update on /r/d3up</a> about the site and 1.0.7 updates. If you find any issues with the new gems, please <a href="mailto:aaron.cox@greymass.com">sent me an email</a> with a link to your build!
 </div>
