Removed the D, lol.

--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -9,5 +9,5 @@
 </div> -->
 <div id="sys-message">
 	<h3 style='margin: 0; color: #d00'>Issues with Battle.net - Please Read</h3>
-	Since sometime on Friday (the 15th), the Battle.net API has been acting strange. Requests for characters and items (non 1.0.7 related) are failing. I've contacted Blizzard about it and hopefully they'll have it resolved soon. (Previously)  d I also posted <a href="http://www.reddit.com/r/d3up/comments/18dtlq/d3upcom_v107_and_future_plans/">a long update on /r/d3up</a> about the site and 1.0.7 updates. If you find any issues with the new gems, please <a href="mailto:aaron.cox@greymass.com">sent me an email</a> with a link to your build!
+	Since sometime on Friday (the 15th), the Battle.net API has been acting strange. Requests for characters and items (non 1.0.7 related) are failing. I've contacted Blizzard about it and hopefully they'll have it resolved soon. (Previously) I also posted <a href="http://www.reddit.com/r/d3up/comments/18dtlq/d3upcom_v107_and_future_plans/">a long update on /r/d3up</a> about the site and 1.0.7 updates. If you find any issues with the new gems, please <a href="mailto:aaron.cox@greymass.com">sent me an email</a> with a link to your build!
 </div>
