--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,5 +1,5 @@
 <div id="sys-message">
-	<h3 style='margin: 0; color: #0d0'>1.0.7 Skills/Gems are Live, Armory Fixed</h3>
-	<strong>The armory seems to be fully working with 1.0.7 now.</strong> All of the calculations <i>should</i> be updated now to match the 1.0.7 patch release and I've posted <a href="http://www.reddit.com/r/d3up/comments/18dtlq/d3upcom_v107_and_future_plans/">a long update on /r/d3up</a> about the site. If you find your character's DPS is wrong with one of the new gems, please sent me an email with a link to your build!
+	<h3 style='margin: 0; color: #0d0'>D3Up V2 In-progress</h3>
+	Been a bit quiet on the update front, because I've been busy working on D3Up V2. It's a complete revamp of the site with a TON of new features, including multi-language support, mobile friendly design and much more. I'm still in the boring part of development, but expect previews soon and a spring/summer launch!
 	Feel free to contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a> to report any bugs.
 </div>
