--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,5 +1,5 @@
 <div id="sys-message">
-	<h3 style='margin: 0; color: #0d0'>D3Up V2 In-progress</h3>
-	Been a bit quiet on the update front, because I've been busy working on D3Up V2. It's a complete revamp of the site with a TON of new features, including multi-language support, mobile friendly design and much more. I'm still in the boring part of development, but expect previews soon and a spring/summer launch!
+	<h3 style='margin: 0; color: #0d0'>D3Up V2 - Feature Preview #1</h3>
+	Over the next month or two, I'm going to be previewing features on <a href='http://reddit.com/r/d3up'>/r/d3up on reddit</a>, with the first one today! <a href='http://www.reddit.com/r/d3up/comments/1b6i62/new_feature_1_forum_signatures_in_d3upcom_v2/'>Forum Signature Images</a> is the first one and I'd love to get some feedback from the artistic folks among you. Feel free to stop by and leave a comment!
 	Feel free to contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a> to report any bugs.
 </div>
