System message about downtime.

--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,6 +1,10 @@
-<div id="sys-message">
+<div id="sys-message" style="font-size: 16px">
+	<h2 style='margin: 0; color: #d00'>D3Up.com Downtime Tonight (Apr 9)</h2>
+	The server will be going down for approximately an hour at some point tonight. It's in the <a href=''>upgrade queue for doubling it's RAM</a> and will happen probably within the next 2-3 hours, and be down for about 60 minutes. 
+</div>
+<!-- <div id="sys-message">
 	<h3 style='margin: 0; color: #0d0'>D3Up V2 - Feature Preview #2</h3>
 	Over the next month or two, I'm going to be previewing features on <a href='http://reddit.com/r/d3up'>/r/d3up on reddit</a>, 
 	with #2 being shown off today! <a href='http://www.reddit.com/r/d3up/comments/1brecl/new_feature_2_build_comparisons_in_d3upcom_v2/'>Build Comparisons</a> is going to be a new way to compare your build with another to see what makes each build tick.
 	Feel free to contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a> to report any bugs.
-</div>
+</div> -->
