--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,6 +1,6 @@
 <div id="sys-message" style="font-size: 16px">
 	<h2 style='margin: 0; color: #d00'>D3Up.com Downtime Tonight (Apr 9)</h2>
-	The server will be going down for approximately an hour at some point tonight. It's in the <a href=''>upgrade queue for doubling it's RAM</a> and will happen probably within the next 2-3 hours, and be down for about 60 minutes. 
+	The server will be going down for approximately an hour at some point tonight. It's in the <a href='http://blog.linode.com/2013/04/09/linode-nextgen-ram-upgrade/'>upgrade queue for doubling it's RAM</a> and will happen probably within the next 2-3 hours, and be down for about 60 minutes. 
 </div>
 <!-- <div id="sys-message">
 	<h3 style='margin: 0; color: #0d0'>D3Up V2 - Feature Preview #2</h3>
